# ascodt-nightly

ASCoDTKernel/: .classpath  console.txt  plugin.xml
ASCoDTKernel/.svn/: dir-props  entries
ASCoDTKernel/schema/.svn/: entries
ASCoDTKernel/scripts/: generate_sidl_compiler.sh
ASCoDTKernel/scripts/.svn/: entries
ASCoDTKernel/src/: sidl-compiler.sablecc.grammar
ASCoDTKernel/src/.svn/: entries
ASCoDTKernel/src/de/.svn/: entries
ASCoDTKernel/third-party-libs/.svn/: entries
ASCoDTVTK/: .classpath  .project  build.properties  plugin.xml
ASCoDTVTK/src/: VTKExtension.java
components/athlet-components/sidl/: Athlet.sidl
components/athlet-components/src/cmake-grs.Quabox/: CMakeLists.txt
components/athlet-components/src/grs/: AthletImplementation.f90  QuaboxImplementation.f90  athlet.f  n3inp.f90  n3inte.f90  n3rest.f90  n3set.f90
examples/: .gitignore
examples/CouplingLBNS/: .CouplingLBNS.ascodt  .classpath  .project  CMakeLists.txt
examples/CouplingLBNS/cmake/: Makefile.CouplingDriver  Makefile.LB  Makefile.NS
examples/CouplingLBNS/cmake-modules/: FindMKL.cmake
examples/CouplingLBNS/cmake/cca.cfd.CouplingDriver/: CMakeLists.txt  sources.cmake  targets.cmake
examples/CouplingLBNS/cmake/cca.cfd.LB/: CMakeLists.txt  sources.cmake  sources.cmake~
examples/CouplingLBNS/cmake/cca.cfd.NS/: CMakeLists.txt  Makefile.NS  sources.cmake
examples/CouplingLBNS/cmake/cca.cfd.UekermannDriver/: CMakeLists.txt  sources.cmake
examples/CouplingLBNS/components/java/: tinyxml2.cpp  tinyxml2.h
examples/CouplingLBNS/results/: Link to transponse.sh  channel_result.0.0.vtk  channel_result.0.1.vtk  channel_result.0.10.vtk  channel_result.0.11.vtk  channel_result.0.12.vtk  channel_result.0.13.vtk  channel_result.0.14.vtk  channel_result.0.15.vtk  channel_result.0.16.vtk  channel_result.0.17.vtk  channel_result.0.18.vtk  channel_result.0.19.vtk  channel_result.0.2.vtk  channel_result.0.3.vtk  channel_result.0.4.vtk  channel_result.0.5.vtk  channel_result.0.6.vtk  channel_result.0.7.vtk  channel_result.0.8.vtk  channel_result.0.9.vtk  lbprofiles.txt  lbprofiles.txt~  nspressure.txt  nsprofiles.txt  process_profiles_gnuplot.py  transponse.sh
examples/CouplingLBNS/settings/: NS.settings  cca.cfd.CouplingDriver.settings  cca.cfd.LB.settings  cca.cfd.NS.settings  cca.cfd.UekermannDriver.settings
examples/CouplingLBNS/sidl/: cca.cfd.CouplingDriver.sidl  cca.cfd.LB.sidl  cca.cfd.NS.sidl  cca.cfd.UekermannDriver.sidl
examples/CouplingLBNS/workspace/: BuggyWorkbench.workbench  CouplingWorkbench.workbench  DeployableWorkbench.workbench  DeployableWorkbench.xml  ParallelTestWorkbench.workbench  StandaloneWorkbench.workbench  StandaloneWorkbench.xml  TestWorkbench.workbench  UekermannWorkbench.workbench  UekermannWorkbench.xml  cca.cfd.LB.conf  channel_result.0.0.vtk  channel_result.0.1.vtk  channel_result.0.10.vtk  channel_result.0.11.vtk  channel_result.0.12.vtk  channel_result.0.13.vtk  channel_result.0.14.vtk  channel_result.0.15.vtk  channel_result.0.16.vtk  channel_result.0.17.vtk  channel_result.0.18.vtk  channel_result.0.19.vtk  channel_result.0.2.vtk  channel_result.0.20.vtk  channel_result.0.21.vtk  channel_result.0.22.vtk  channel_result.0.23.vtk  channel_result.0.24.vtk  channel_result.0.25.vtk  channel_result.0.26.vtk  channel_result.0.27.vtk  channel_result.0.28.vtk  channel_result.0.29.vtk  channel_result.0.3.vtk  channel_result.0.30.vtk  channel_result.0.31.vtk  channel_result.0.32.vtk  channel_result.0.33.vtk  channel_result.0.34.vtk  (+230 more)
examples/CouplingLBNS/workspace/res_4x2x2_coupled/: channel_result.0.10.vtk  channel_result.0.11.vtk  channel_result.0.12.vtk  channel_result.0.2.vtk  channel_result.0.3.vtk  channel_result.0.4.vtk  channel_result.0.5.vtk  channel_result.0.6.vtk  (+9 more)
examples/MethodsInvocations/: .MethodsInvocations.ascodt  .classpath  .project
examples/MethodsInvocations/native/: DriverComponent  ExampleComponent
examples/MethodsInvocations/results/: ascodt_2_15.txt  ascodt_2_5.txt  ascodt_array.txt  ascodt_gs_f_256.txt  ascodt_gs_f_32.txt  ascodt_gs_f_512.txt  ascodt_gs_local_128.txt  ascodt_gs_local_256.txt  ascodt_gs_local_32.txt  ascodt_socket.txt  babel_2_10.txt  babel_2_15.txt  babel_2_6.txt  ccaffeine_cxx_512.txt
examples/MethodsInvocations/settings/: DriverComponent.settings  ExampleComponent.settings
examples/MethodsInvocations/sidl/: AdamsMoulton.sidl  AppDriver.sidl  DriverComponent.sidl  ExampleComponent.sidl  FGausSeidel.sidl  GausSeidel.sidl  ImplicitEuler.sidl  Jacobi.sidl  Laplace.sidl  LinePlotter.sidl  Mesh.sidl  My234Component.sidl  MyComponent.sidl  MyComponent2.sidl  SOR.sidl  Visualiser.sidl
examples/MethodsInvocations/src/: Makefile.AdamsMoulton  Makefile.FGausSeidel  Makefile.GausSeidel  Makefile.Jacobi  Makefile.Mesh  Makefile.MyComponent
examples/MethodsInvocations/workspace/: MyWorkbench.workbench  pde.workbench
examples/SimpleRemoteExample/: .SimpleRemoteExample.ascodt  .classpath  .project  CMakeLists.txt
examples/SimpleRemoteExample/cmake/: Makefile.B
examples/SimpleRemoteExample/settings/: examples.A.settings  examples.B.settings
examples/SimpleRemoteExample/sidl/: examples.A.sidl  examples.B.sidl
examples/SimpleRemoteExample/workspace/: RemoteWorkbench.workbench  RemoteWorkbench.xml
examples/TestNativeComponent/: .ASCoDT.Test.ascodt  .TestNativeComponent.ascodt  .classpath  .project
examples/TestNativeComponent/sidl/: de.tum.test.Test.sidl  de.tum.test.Test1.sidl
examples/TestNativeComponent/workspace/: MyWorkbench.workbench  MyWorkbench.xml
examples/TestNativeConnection/: .TestNativeConnection.ascodt  .classpath  .gitignore  .project  CMakeLists.txt
examples/TestNativeConnection/sidl/: test.A.sidl  test.B.sidl
examples/TestNativeConnection/workspace/: MyWorkbench.workbench  MyWorkbench.xml
examples/TestVTK/: .TestVTK.ascodt  .TestsVTK.ascodt  .classpath  .project
examples/TestVTK/sidl/: test.MyVTKComponent.sidl
examples/TestVTK/workspace/: MyWorkbench.workbench  MyWorkbench.xml
examples/backup/cmake/: Makefile.LB  Makefile.UekermannDriver
releases/juno/: .project  site.xml
(+1491 files in other folders)
